tests/run/error_method_arity.out
tests/run/error_method_arity.em:3:47: error: wrong number of arguments to method
